# habit_tracker

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py
